; ModuleID = '/home/carl/AnghaBench/seafile/common/index/extr_hash.c_insert_hash_entry.c'
source_filename = "/home/carl/AnghaBench/seafile/common/index/extr_hash.c_insert_hash_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hash_table = type { i32 }
%struct.hash_table_entry = type { i8*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8** (i32, i8*, %struct.hash_table*)* @insert_hash_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8** @insert_hash_entry(i32 %0, i8* %1, %struct.hash_table* %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.hash_table*, align 8
  %8 = alloca %struct.hash_table_entry*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store %struct.hash_table* %2, %struct.hash_table** %7, align 8
  %9 = load i32, i32* %5, align 4
  %10 = load %struct.hash_table*, %struct.hash_table** %7, align 8
  %11 = call %struct.hash_table_entry* @lookup_hash_entry(i32 %9, %struct.hash_table* %10)
  store %struct.hash_table_entry* %11, %struct.hash_table_entry** %8, align 8
  %12 = load %struct.hash_table_entry*, %struct.hash_table_entry** %8, align 8
  %13 = getelementptr inbounds %struct.hash_table_entry, %struct.hash_table_entry* %12, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %27, label %16

16:                                               ; preds = %3
  %17 = load i8*, i8** %6, align 8
  %18 = load %struct.hash_table_entry*, %struct.hash_table_entry** %8, align 8
  %19 = getelementptr inbounds %struct.hash_table_entry, %struct.hash_table_entry* %18, i32 0, i32 0
  store i8* %17, i8** %19, align 8
  %20 = load i32, i32* %5, align 4
  %21 = load %struct.hash_table_entry*, %struct.hash_table_entry** %8, align 8
  %22 = getelementptr inbounds %struct.hash_table_entry, %struct.hash_table_entry* %21, i32 0, i32 1
  store i32 %20, i32* %22, align 8
  %23 = load %struct.hash_table*, %struct.hash_table** %7, align 8
  %24 = getelementptr inbounds %struct.hash_table, %struct.hash_table* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %24, align 4
  store i8** null, i8*** %4, align 8
  br label %30

27:                                               ; preds = %3
  %28 = load %struct.hash_table_entry*, %struct.hash_table_entry** %8, align 8
  %29 = getelementptr inbounds %struct.hash_table_entry, %struct.hash_table_entry* %28, i32 0, i32 0
  store i8** %29, i8*** %4, align 8
  br label %30

30:                                               ; preds = %27, %16
  %31 = load i8**, i8*** %4, align 8
  ret i8** %31
}

declare dso_local %struct.hash_table_entry* @lookup_hash_entry(i32, %struct.hash_table*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
